# six-degrees-api.wikiadventu.re

./: .dockerignore  .env.sample  .gitignore  .swcrc  README.md  dockerfile  dockerfile.arango  dockerfile.dev  dockerfile.falkordb  dockerfile.memgraph  dockerfile.neo4j  dockerfile.serverless  entrypoint.sh  entrypointGCP.sh  nodemon.json  package-lock.json  package.json  tsconfig.json
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/workflows/: CreateDockerApiImage.yml  CreateDockerComputeImage.yml  GenerateArangoDumpOnGoogleCloudStorage.yml  main.yml  (+5 more)
rust-serverless/: Cargo.toml
rust-serverless/src/: main.rs
serverless-docker/: .dockerignore  .swcrc  bun.lockb  dockerfile  dockerfile.neo4j  index.ts  package-lock.json  package.json  tsconfig.json
serverless-docker-memgraph/: .dockerignore  bun.lockb  dockerfile.memgraph  dockerfile.new  index.ts  package.json
sql-dump-to-arango/: .swcrc  bun.lockb  env.ts  index.ts  package-lock.json  package.json  tsconfig.json
sql-dump-to-aws-neptune/: env.ts  index.ts  indexAWS.ts  package-lock.json  package.json
sql-dump-to-falkordb/: README.md  env.ts  index.ts  indexLocal.ts  package-lock.json  package.json
sql-dump-to-memgraph/: bun.lockb  env.ts  index.ts  package-lock.json  package.json
sql-dump-to-neo4j/: index.ts  indexGCP.ts  package-lock.json  package.json  tsconfig.json
sql-dump-to-rust/: Cargo.toml
sql-dump-to-rust/src/: main.rs
sql-dump-to-rust/src/logger/: dump_logger.rs
sql-dump-to-surreal/: env.ts  index.ts  package-lock.json  package.json  tsconfig.json
src/: index.ts
(+21 files in other folders)
