[package]
name = "rust-serverless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
env_logger = "0.11.3"
log = "0.4.21"
rayon = "1.10.0"
memmap2 = "0.9.5"
rkyv = { version = "0.8.10", features = ["pointer_width_64"] }
once_cell = "1.21.3"
serde_json = "1.0"
num_cpus = "1.17.0"
num_threads = "0.1.7"
actix-cors = "0.7.1"
rustc-hash = "2.1.1"
