[package]
name = "sql-dump-to-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11.1"
reqwest = { version = "0.12.20", features = ["blocking", "stream"] }
flate2 = "1.1.2"
indicatif = "0.17.11"
lazy_static = "1.5.0"
tokio = { version = "1.45.1", features = ["full"] }
async-gen = "0.2.3"
utf8-chars = "3.0.5"
async-stream = "0.3.6"
futures = "0.3.31"
futures-util = "0.3"
sysinfo = "0.35.2"
rkyv = { version = "0.8.10", features = ["pointer_width_64"] }
once_cell = "1.21.3"
rustc-hash = "2.1.1"
num_threads = "0.1.7"
dotenv = "0.15.0"
tokio-util = { version = "0.7.15", features = ["io-util", "io", "compat"] }
async-compression = { version = "0.4.25", features = ["futures-io", "gzip"] }
async-trait = "0.1.77"
bytes = "1.5.0"
futures-core = "0.3.30"
tokio-stream = "0.1.14"

[build-dependencies]
# prost-build = "0.12.3" 

[profile.release]
strip = true
